--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p>
                         I laid the foundation for my creative journey by studying photography. Through my prior experience as a model, I gained insights into the creative and visual world, which further fueled my passion for graphic design. Self&dash;study and practical experience in various companies deepened my skills.
                         <br>
-                        Painting, which has accompanied me since childhood, is not just a hobby, but an essentialpart of my life. This artistic passion flows seamlessly into my work and I combine myexperience in photography, graphic design and painting to create a multi&dash;layeredunderstanding of visual aesthetics and expression.
+                        Painting, which has accompanied me since childhood, is not just a hobby, but an essential part of my life. This artistic passion flows seamlessly into my work and I combine my experience in photography, graphic design and painting to create a multi&dash;layered understanding of visual aesthetics and expression.
                     </p>
                 </div>
                 <div class="fontS">
@@ -77,12 +77,12 @@
                     </div>
                 </div>
                 <div class="sectionImage">
-                    <img src="assets/old/asset_09_sunny_side_up_007.jpg" alt="">
+                    <img src="https://placehold.co/25x35" alt="">
                 </div>
             </div>
             <div class="contentSection">
                 <div class="sectionImage">
-                    <img src="https://picsum.dev/250/350" alt="">
+                    <img src="https://placehold.co/35x25" alt="">
                 </div>
                 <div class="sectionInfo">
                     <div class="fontM">
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="sectionImage">
-                    <img src="https://picsum.dev/351/251" alt="">
+                    <img src="https://placehold.co/10x10" alt="">
                 </div>
             </div>
         </div>
