--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                     </div>
                 </div>
                 <div class="sectionImage">
-                    <img src="https://placehold.co/25x35" alt="">
+                    <img src="https://placehold.co/25x35?text=vertical+placeholder" alt="">
                 </div>
             </div>
             <div class="contentSection">
                 <div class="sectionImage">
-                    <img src="https://placehold.co/35x25" alt="">
+                    <img src="https://placehold.co/35x25?text=horizonal+placeholder" alt="">
                 </div>
                 <div class="sectionInfo">
                     <div class="fontM">
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="sectionImage">
-                    <img src="https://placehold.co/10x10" alt="">
+                    <img src="https://placehold.co/10x10?text=rect+placeholder" alt="">
                 </div>
             </div>
         </div>
