--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                     </div>
                 </div>
                 <div class="sectionImage">
-                    <img src="https://placehold.co/25x35?text=vertical+placeholder" alt="">
+                    <img src="assets/placeholder_white_horizontal.jpg" alt="">
                 </div>
             </div>
             <div class="contentSection" data-project="green">
                 <div class="sectionImage">
-                    <img src="https://placehold.co/35x25?text=horizonal+placeholder" alt="">
+                    <img src="assets/placeholder_white_vertical.jpg" alt="">
                 </div>
                 <div class="sectionInfo">
                     <div class="fontM">
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="sectionImage">
-                    <img src="https://placehold.co/10x10?text=rect+placeholder" alt="">
+                    <img src="assets/placeholder_white_rect.jpg" alt="">
                 </div>
             </div>
         </div>
