--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <svg class="pageFader"></svg>
         <div class="contentFixed">
             <div class="contentFixedLeft">
-                <div class="fontL">
+                <div class="fontL marquee-text">
                     Céline Lötscher
                 </div>
                 <div class="fontM">
