--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <svg class="pageFader"></svg>
         <div class="contentFixed">
             <div class="contentFixedLeft">
-                <div class="fontL marquee-text">
+                <div class="fontL">
                     Céline Lötscher
                 </div>
                 <div class="fontM">
@@ -62,7 +62,7 @@
                     <div class="fontM">
                         <p>
                             Sunny Side Up<br>
-                            Branding / Logodesign
+                            <div class="italic">Branding / Logodesign</div>
                         </p>
                     </div>
                     <div class="fontM">
@@ -79,41 +79,37 @@
                 </div>
             </div>
             <div class="contentSection" data-project="green">
-                <div class="sectionImage">
-                    <img src="assets/placeholder_white_horizontal.jpg" alt="">
-                </div>
                 <div class="sectionInfo">
                     <div class="fontM">
                         <p>
-                            Lorem ipsum
+                            first line<br>
+                            <div class="italic">second line</div>
                         </p>
                     </div>
                     <div class="fontM">
                         <p>
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
                         </p>
                     </div>
                     <div class="fontS">
                         <p class="underline viewProject" data-project="green">view full project</p>
                     </div>
                 </div>
+                <div class="sectionImage">
+                    <img src="assets/placeholder_white_horizontal.jpg" alt="">
+                </div>
             </div>
             <div class="contentSection" data-project="yellow">
                 <div class="sectionInfo">
                     <div class="fontM">
                         <p>
-                            Lorem ipsum
+                            first line<br>
+                            <div class="italic">second line</div>
                         </p>
                     </div>
                     <div class="fontM">
                         <p>
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
                         </p>
                     </div>
                     <div class="fontS">
