--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="fontM">
                         <p>
                             <div class="bold">Furka</div>
-                            <div class="italic">Lyout Design</div>
+                            <div class="italic">Layout Design</div>
                         </p>
                     </div>
                     <div class="fontM">
