--- a/index.html
+++ b/index.html
@@ -34,6 +34,157 @@
     </head>
     <body oncontextmenu="return false">
         <svg class="pageFader"></svg>
+        <div class="columnFixed">
+            <div class="columnFixedLeft">
+                <div class="fontL">
+                    Céline Lötscher
+                </div>
+                <div class="fontM">
+                    <p>
+                        I laid the foundation for my creative journey by studying photography. Through my prior experience as a model, I gained insights into the creative and visual world, which further fueled my passion for graphic design. Self&dash;study and practical experience in various companies deepened my skills.
+                        <br>
+                        Painting, which has accompanied me since childhood, is not just a hobby, but an essential part of my life. This artistic passion flows seamlessly into my work and I combine my experience in photography, graphic design and painting to create a multi&dash;layered understanding of visual aesthetics and expression.
+                    </p>
+                </div>
+                <div class="fontS">
+                    info@celineloetscher.ch<br>
+                    @celinelgraphics
+                </div>
+            </div>
+            <div class="columnFixedRight">
+                <img style="height: auto;" src="assets/asset_info.jpg" alt="">
+            </div>
+            <svg class="scrollIndicator" viewBox="-1 -1 18 17.5">
+                <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
+            </svg>
+        </div>
+        <div class="columnScroll">
+            <div class="columnScrollSection" data-project="sunny_side_up">
+                <div class="columnScrollSectionInfo">
+                    <div class="fontL">
+                        Graphic Design
+                    </div>
+                    <div class="fontM">
+                        <p>
+                            I create professional layouts, develop creative illustrations, and design  memorable logos. With a strong sense of aesthetics and functionality,  I transform visual concepts into designs that strengthen brands and  communicate messages clearly.<br><br>
+                            <div style="color: red">This section's styling is not final</div>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="columnScrollSection" data-project="sunny_side_up">
+                <div class="columnScrollSectionInfo">
+                    <div class="fontM">
+                        <p>
+                            <div class="bold">Sunny Side Up</div>
+                            <div class="italic">Branding / Logodesign</div>
+                        </p>
+                    </div>
+                    <div class="fontM">
+                        <p>
+                            The branding for Sunny Side Up Café is built around a clean, modern visual identity that reflects warmth, clarity, and approachability. The logo combines minimalist typography with a subtle circular accent. A restrained color palette and balanced layout ensure a refined, contemporary look that enhances brand recognition across signage, packaging, and digital applications.
+                        </p>
+                    </div>
+                    <div class="fontS">
+                        <p class="underline viewProject" data-project="sunny_side_up">view full project</p>
+                    </div>
+                </div>
+                <div class="columnScrollSectionImage">
+                    <img src="assets/asset_001_001.jpg" alt="">
+                </div>
+            </div>
+            <div class="columnScrollSection" data-project="urban_fitness">
+                <div class="columnScrollSectionInfo">
+                    <div class="fontM">
+                        <p>
+                            <div class="bold">Urban Fitness</div>
+                            <div class="italic">Branding / Logodesign</div>
+                        </p>
+                    </div>
+                    <div class="fontM">
+                        <p>
+                            The visual identity for Urban Fitness is designed with a reduced and modern aesthetic that emphasizes clarity and natural balance. The logo integrates clean typography with an organic leaf-inspired symbol, reflecting the brand’s focus on holistic senior fitness for both body and mind. A bright yet earthy color palette, paired with minimalist graphic elements, creates a contemporary and approachable appearance.
+                        </p>
+                    </div>
+                    <div class="fontS">
+                        <p class="underline viewProject" data-project="urban_fitness">view full project</p>
+                    </div>
+                </div>
+                <div class="columnScrollSectionImage">
+                    <img src="assets/asset_002_001.jpg" alt="">
+                </div>
+            </div>
+            <div class="columnScrollSection" data-project="furka">
+                <div class="columnScrollSectionInfo">
+                    <div class="fontM">
+                        <p>
+                            <div class="bold">Furka</div>
+                            <div class="italic">Layout Design</div>
+                        </p>
+                    </div>
+                    <div class="fontM">
+                        <p>
+                            I‘ve combined my photography skills with a simple layout for this booklet. It is a representation of the brutalist nature that hold this mountains and resistance against glacier melting. 
+                        </p>
+                    </div>
+                    <div class="fontS">
+                        <p class="underline viewProject" data-project="furka">view full project</p>
+                    </div>
+                </div>
+                <div class="columnScrollSectionImage">
+                    <img src="assets/asset_003_001.jpg" alt="">
+                </div>
+            </div>
+            <div class="columnScrollSection" data-project="neumuehle">
+                <div class="columnScrollSectionInfo">
+                    <div class="fontM">
+                        <p>
+                            <div class="bold">Neumühle Icons</div>
+                            <div class="italic">Illustration Design</div>
+                        </p>
+                    </div>
+                    <div class="fontM">
+                        <p>
+                            With Neumühle I‘ve created Icons for all clothing collections with fine detailing and understanding for each farbic. These were representet on the webside, social media posts and advertisements.
+                        </p>
+                    </div>
+                    <div class="fontS">
+                        <p class="underline viewProject" data-project="neumuehle">view full project</p>
+                    </div>
+                </div>
+                <div class="columnScrollSectionImage">
+                    <img src="assets/asset_004_001.jpg" alt="">
+                </div>
+            </div>
+            <div class="columnScrollSection" data-project="cupcake">
+                <div class="columnScrollSectionInfo">
+                    <div class="fontM">
+                        <p>
+                            <div class="bold">Cupcake</div>
+                            <div class="italic">Illustration Design</div>
+                        </p>
+                    </div>
+                    <div class="fontM">
+                        <p>
+                            I was hungry.
+                        </p>
+                    </div>
+                    <div class="fontS">
+                        <p class="underline viewProject" data-project="cupcake">view full project</p>
+                    </div>
+                </div>
+                <div class="columnScrollSectionImage">
+                    <img src="assets/asset_005_001.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+        <!--
         <div class="contentFixed">
             <div class="contentFixedLeft">
                 <div class="fontL">
@@ -56,6 +207,7 @@
                 <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
             </svg>
         </div>
+    -->
         <div class="contentScroll">
             <div class="contentSection" data-project="sunny_side_up">
                 <div class="sectionInfo">
@@ -176,6 +328,7 @@
                 </div>
             </div>
         </div>
+
 
 
 
