--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                         </p>
                     </div>
                 </div>
+                 <div class="columnScrollSectionImage">
+                </div>
             </div>
             <div class="columnScrollSection" data-project="sunny_side_up">
                 <div class="columnScrollSectionInfo">
