--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     </div>
                 </div>
                  <div class="columnScrollSectionImage">
+                    <!-- placeholder to fix column layout -->
                 </div>
             </div>
             <div class="columnScrollSection" data-project="sunny_side_up">
