--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </head>
     <body oncontextmenu="return false">
         <svg class="pageFader"></svg>
-        <div class="columnFixed">
-            <div class="columnFixedLeft">
+        <div class="colFixed">
+            <div class="colFixedLeft">
                 <div class="fontL">
                     Céline Lötscher
                 </div>
@@ -51,32 +51,31 @@
                     @celinelgraphics
                 </div>
             </div>
-            <div class="columnFixedRight">
+            <div class="colFixedRight">
                 <img style="height: auto;" src="assets/asset_info.jpg" alt="">
             </div>
             <svg class="scrollIndicator" viewBox="-1 -1 18 17.5">
                 <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
             </svg>
         </div>
-        <div class="columnScroll">
-            <div class="columnScrollSection" data-project="sunny_side_up">
-                <div class="columnScrollSectionInfo">
+        <div class="colScroll">
+            <div class="colScrollSection" data-project="sunny_side_up">
+                <div class="colScrollSectionInfo">
                     <div class="fontL">
                         Graphic Design
                     </div>
                     <div class="fontM">
                         <p>
-                            I create professional layouts, develop creative illustrations, and design  memorable logos. With a strong sense of aesthetics and functionality,  I transform visual concepts into designs that strengthen brands and  communicate messages clearly.<br><br>
-                            <div style="color: red">This section's styling is not final</div>
+                            I create professional layouts, develop creative illustrations, and design  memorable logos. With a strong sense of aesthetics and functionality,  I transform visual concepts into designs that strengthen brands and  communicate messages clearly.
                         </p>
                     </div>
                 </div>
-                 <div class="columnScrollSectionImage">
-                    <!-- placeholder to fix column layout -->
+                 <div class="colScrollSectionImage">
+                    <!-- col placeholder -->
                 </div>
             </div>
-            <div class="columnScrollSection" data-project="sunny_side_up">
-                <div class="columnScrollSectionInfo">
+            <div class="colScrollSection" data-project="sunny_side_up">
+                <div class="colScrollSectionInfo">
                     <div class="fontM">
                         <p>
                             <div class="bold">Sunny Side Up</div>
@@ -92,12 +91,12 @@
                         <p class="underline viewProject" data-project="sunny_side_up">view full project</p>
                     </div>
                 </div>
-                <div class="columnScrollSectionImage">
+                <div class="colScrollSectionImage">
                     <img src="assets/asset_001_001.jpg" alt="">
                 </div>
             </div>
-            <div class="columnScrollSection" data-project="urban_fitness">
-                <div class="columnScrollSectionInfo">
+            <div class="colScrollSection" data-project="urban_fitness">
+                <div class="colScrollSectionInfo">
                     <div class="fontM">
                         <p>
                             <div class="bold">Urban Fitness</div>
@@ -113,12 +112,12 @@
                         <p class="underline viewProject" data-project="urban_fitness">view full project</p>
                     </div>
                 </div>
-                <div class="columnScrollSectionImage">
+                <div class="colScrollSectionImage">
                     <img src="assets/asset_002_001.jpg" alt="">
                 </div>
             </div>
-            <div class="columnScrollSection" data-project="furka">
-                <div class="columnScrollSectionInfo">
+            <div class="colScrollSection" data-project="furka">
+                <div class="colScrollSectionInfo">
                     <div class="fontM">
                         <p>
                             <div class="bold">Furka</div>
@@ -134,12 +133,12 @@
                         <p class="underline viewProject" data-project="furka">view full project</p>
                     </div>
                 </div>
-                <div class="columnScrollSectionImage">
+                <div class="colScrollSectionImage">
                     <img src="assets/asset_003_001.jpg" alt="">
                 </div>
             </div>
-            <div class="columnScrollSection" data-project="neumuehle">
-                <div class="columnScrollSectionInfo">
+            <div class="colScrollSection" data-project="neumuehle">
+                <div class="colScrollSectionInfo">
                     <div class="fontM">
                         <p>
                             <div class="bold">Neumühle Icons</div>
@@ -155,12 +154,12 @@
                         <p class="underline viewProject" data-project="neumuehle">view full project</p>
                     </div>
                 </div>
-                <div class="columnScrollSectionImage">
+                <div class="colScrollSectionImage">
                     <img src="assets/asset_004_001.jpg" alt="">
                 </div>
             </div>
-            <div class="columnScrollSection" data-project="cupcake">
-                <div class="columnScrollSectionInfo">
+            <div class="colScrollSection" data-project="cupcake">
+                <div class="colScrollSectionInfo">
                     <div class="fontM">
                         <p>
                             <div class="bold">Cupcake</div>
@@ -176,7 +175,7 @@
                         <p class="underline viewProject" data-project="cupcake">view full project</p>
                     </div>
                 </div>
-                <div class="columnScrollSectionImage">
+                <div class="colScrollSectionImage">
                     <img src="assets/asset_005_001.jpg" alt="">
                 </div>
             </div>
