--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
         <div class="colScroll">
             <div class="colScrollSection" data-project="sunny_side_up">
                 <div class="colScrollSectionInfo">
-                    <div class="fontL">
+                    <div class="fontL" style="text-align: center;">
                         Graphic Design
                     </div>
                     <div class="fontM">
-                        <p>
+                        <p style="text-align: center;">
                             I create professional layouts, develop creative illustrations, and design  memorable logos. With a strong sense of aesthetics and functionality,  I transform visual concepts into designs that strengthen brands and  communicate messages clearly.
                         </p>
                     </div>
