--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </svg>
         </div>
         <div class="colScroll">
-            <div class="colScrollSection" data-project="sunny_side_up">
+            <div class="colScrollSection">
                 <div class="colScrollSectionInfo">
                     <div class="fontL" style="text-align: center;">
                         Graphic Design
@@ -70,8 +70,7 @@
                         </p>
                     </div>
                 </div>
-                 <div class="colScrollSectionImage">
-                    <!-- col placeholder -->
+                 <div class="colScrollSectionImage" style="display: none;">
                 </div>
             </div>
             <div class="colScrollSection" data-project="sunny_side_up">
@@ -91,7 +90,7 @@
                         <p class="underline viewProject" data-project="sunny_side_up">view full project</p>
                     </div>
                 </div>
-                <div class="colScrollSectionImage">
+                <div class="colScrollSectionImage viewProject" data-project="sunny_side_up">
                     <img src="assets/asset_001_001.jpg" alt="">
                 </div>
             </div>
