--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <p class="underline viewProject" data-project="urban_fitness">view full project</p>
                     </div>
                 </div>
-                <div class="colScrollSectionImage">
+                <div class="colScrollSectionImage viewProject" data-project="urban_fitness">
                     <img src="assets/asset_002_001.jpg" alt="">
                 </div>
             </div>
@@ -132,7 +132,7 @@
                         <p class="underline viewProject" data-project="furka">view full project</p>
                     </div>
                 </div>
-                <div class="colScrollSectionImage">
+                <div class="colScrollSectionImage viewProject" data-project="furka">
                     <img src="assets/asset_003_001.jpg" alt="">
                 </div>
             </div>
@@ -153,7 +153,7 @@
                         <p class="underline viewProject" data-project="neumuehle">view full project</p>
                     </div>
                 </div>
-                <div class="colScrollSectionImage">
+                <div class="colScrollSectionImage viewProject" data-project="neumuehle">
                     <img src="assets/asset_004_001.jpg" alt="">
                 </div>
             </div>
@@ -174,7 +174,7 @@
                         <p class="underline viewProject" data-project="cupcake">view full project</p>
                     </div>
                 </div>
-                <div class="colScrollSectionImage">
+                <div class="colScrollSectionImage viewProject" data-project="cupcake">
                     <img src="assets/asset_005_001.jpg" alt="">
                 </div>
             </div>
